load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "builder",
    srcs = [
        "build_queue.go",
        "configuration.go",
        "demultiplexing_build_queue.go",
        "forwarding_build_queue.go",
        "non_executable_build_queue.go",
        "update_enabled_toggling_build_queue.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/builder",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/digest",
        "//pkg/grpc",
        "//pkg/proto/configuration/builder",
        "//pkg/util",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_bazelbuild_remote_apis//build/bazel/semver",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "builder_test",
    srcs = [
        "demultiplexing_build_queue_test.go",
        "forwarding_build_queue_test.go",
        "update_enabled_toggling_build_queue_test.go",
    ],
    embed = [":builder"],
    deps = [
        "//internal/mock",
        "//pkg/digest",
        "//pkg/testutil",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_golang_mock//gomock",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_stretchr_testify//require",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
