load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "builder",
    srcs = [
        "authorizing_build_queue.go",
        "build_queue.go",
        "configuration.go",
        "demultiplexing_build_queue.go",
        "forwarding_build_queue.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/builder",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth",
        "//pkg/capabilities",
        "//pkg/digest",
        "//pkg/grpc",
        "//pkg/proto/configuration/builder",
        "//pkg/util",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_google_cloud_go_longrunning//autogen/longrunningpb",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "builder_test",
    srcs = [
        "authorizing_build_queue_test.go",
        "demultiplexing_build_queue_test.go",
        "forwarding_build_queue_test.go",
    ],
    deps = [
        ":builder",
        "//internal/mock",
        "//pkg/digest",
        "//pkg/testutil",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_bazelbuild_remote_apis//build/bazel/semver",
        "@com_github_stretchr_testify//require",
        "@com_google_cloud_go_longrunning//autogen/longrunningpb",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_uber_go_mock//gomock",
    ],
)
