load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "blob_access_content_addressable_storage.go",
        "content_addressable_storage.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/cas",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/blobstore:go_default_library",
        "//pkg/blobstore/buffer:go_default_library",
        "//pkg/digest:go_default_library",
        "//pkg/filesystem:go_default_library",
        "//pkg/proto/cas:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["blob_access_content_addressable_storage_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//internal/mock:go_default_library",
        "//pkg/blobstore/buffer:go_default_library",
        "//pkg/digest:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
