load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "configuration.go",
        "digest.go",
        "existence_cache.go",
        "instance_name.go",
        "instance_name_patcher.go",
        "instance_name_trie.go",
        "set.go",
        "set_builder.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/digest",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/clock:go_default_library",
        "//pkg/eviction:go_default_library",
        "//pkg/proto/configuration/digest:go_default_library",
        "//pkg/util:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_google_uuid//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "digest_test.go",
        "existence_cache_test.go",
        "instance_name_patcher_test.go",
        "instance_name_test.go",
        "instance_name_trie_test.go",
        "set_builder_test.go",
        "set_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//internal/mock:go_default_library",
        "//pkg/eviction:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
