load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "filesystem",
    srcs = [
        "directory.go",
        "file.go",
        "file_info.go",
        "local_directory_darwin.go",
        "local_directory_freebsd.go",
        "local_directory_linux.go",
        "local_directory_unix.go",
        "local_directory_windows.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/filesystem",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/filesystem/path",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "//pkg/util",
            "@org_golang_google_grpc//codes",
            "@org_golang_google_grpc//status",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//pkg/util",
            "@org_golang_google_grpc//codes",
            "@org_golang_google_grpc//status",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//pkg/util",
            "@org_golang_google_grpc//codes",
            "@org_golang_google_grpc//status",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//pkg/util",
            "@org_golang_google_grpc//codes",
            "@org_golang_google_grpc//status",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//pkg/util",
            "@org_golang_google_grpc//codes",
            "@org_golang_google_grpc//status",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//pkg/filesystem/windowsext",
            "@org_golang_google_grpc//codes",
            "@org_golang_google_grpc//status",
            "@org_golang_x_sys//windows",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "filesystem_test",
    srcs = [
        "local_directory_darwin_test.go",
        "local_directory_test.go",
    ],
    deps = [
        ":filesystem",
        "//pkg/filesystem/path",
        "@com_github_stretchr_testify//require",
    ],
)
