load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "global",
    srcs = [
        "apply_configuration.go",
        "resource_limits_darwin.go",
        "resource_limits_freebsd.go",
        "resource_limits_linux.go",
        "resource_limits_nonunix.go",
        "resource_limits_unix.go",
        "simple_k8s_client.go",
        "umask_nonunix.go",
        "umask_unix.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/global",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/clock",
        "//pkg/grpc",
        "//pkg/http",
        "//pkg/otel",
        "//pkg/program",
        "//pkg/prometheus",
        "//pkg/proto/configuration/global",
        "//pkg/util",
        "@com_github_gorilla_mux//:mux",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_prometheus_client_golang//prometheus/push",
        "@com_github_sercand_kuberesolver_v5//:kuberesolver",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
        "@io_opentelemetry_go_contrib_propagators_b3//:b3",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel//semconv/v1.4.0:v1_4_0",
        "@io_opentelemetry_go_otel_exporters_jaeger//:jaeger",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace//:otlptrace",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//resolver",
        "@org_golang_google_grpc//status",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "@org_golang_google_protobuf//types/known/wrapperspb",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "@org_golang_google_protobuf//types/known/wrapperspb",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "@org_golang_google_protobuf//types/known/wrapperspb",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "@org_golang_google_protobuf//types/known/wrapperspb",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@org_golang_google_protobuf//types/known/wrapperspb",
            "@org_golang_x_sys//unix",
        ],
        "//conditions:default": [],
    }),
)
