load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpc",
    srcs = [
        "allow_authenticator.go",
        "any_authenticator.go",
        "authenticator.go",
        "base_client_factory.go",
        "client_dialer.go",
        "client_factory.go",
        "deduplicating_client_factory.go",
        "deny_authenticator.go",
        "lazy_client_dialer.go",
        "metadata_adding_interceptor.go",
        "metadata_forwarding_and_reusing_interceptor.go",
        "metadata_forwarding_interceptor.go",
        "metadata_header_values.go",
        "request_metadata_tracing_interceptor.go",
        "server.go",
        "tls_client_certificate_authenticator.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/atomic",
        "//pkg/clock",
        "//pkg/proto/configuration/grpc",
        "//pkg/util",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/oauth",
        "@org_golang_google_grpc//health",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//keepalive",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "grpc_test",
    srcs = [
        "allow_authenticator_test.go",
        "any_authenticator_test.go",
        "deduplicating_client_factory_test.go",
        "deny_authenticator_test.go",
        "lazy_client_dialer_test.go",
        "metadata_adding_interceptor_test.go",
        "metadata_forwarding_and_reusing_interceptor_test.go",
        "metadata_forwarding_interceptor_test.go",
        "request_metadata_tracing_interceptor_test.go",
        "tls_client_certificate_authenticator_test.go",
    ],
    embed = [":grpc"],
    deps = [
        "//internal/mock",
        "//pkg/proto/configuration/grpc",
        "//pkg/testutil",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
