load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpc",
    srcs = [
        "all_authenticator.go",
        "allow_authenticator.go",
        "any_authenticator.go",
        "authenticating_interceptor.go",
        "authenticator.go",
        "base_client_factory.go",
        "client_dialer.go",
        "client_factory.go",
        "deduplicating_client_factory.go",
        "deny_authenticator.go",
        "jmespath_extractor.go",
        "jwt_authenticator.go",
        "lazy_client_dialer.go",
        "metadata_adding_interceptor.go",
        "metadata_extracting_and_forwarding_interceptor.go",
        "metadata_forwarding_and_reusing_interceptor.go",
        "metadata_header_values.go",
        "peer_credentials_authenticator.go",
        "peer_transport_credentials.go",
        "peer_transport_credentials_bsd.go",
        "peer_transport_credentials_disabled.go",
        "peer_transport_credentials_linux.go",
        "proto_trace_attributes_extractor.go",
        "proxy_dialer.go",
        "request_metadata_tracing_interceptor.go",
        "server.go",
        "tls_client_certificate_authenticator.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth",
        "//pkg/clock",
        "//pkg/jwt",
        "//pkg/program",
        "//pkg/proto/auth",
        "//pkg/proto/configuration/grpc",
        "//pkg/util",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
        "@com_github_jmespath_go_jmespath//:go-jmespath",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/oauth",
        "@org_golang_google_grpc//health",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//keepalive",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_x_sync//semaphore",
    ] + select({
        "@rules_go//go/platform:android": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:darwin": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:freebsd": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:ios": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "grpc_test",
    srcs = [
        "all_authenticator_test.go",
        "allow_authenticator_test.go",
        "any_authenticator_test.go",
        "authenticating_interceptor_test.go",
        "deduplicating_client_factory_test.go",
        "deny_authenticator_test.go",
        "jmespath_extractor_test.go",
        "lazy_client_dialer_test.go",
        "metadata_adding_interceptor_test.go",
        "metadata_extracting_and_forwarding_interceptor_test.go",
        "metadata_forwarding_and_reusing_interceptor_test.go",
        "peer_credentials_authenticator_test.go",
        "proto_trace_attributes_extractor_test.go",
        "request_metadata_tracing_interceptor_test.go",
        "tls_client_certificate_authenticator_test.go",
    ] + select({
        "@rules_go//go/platform:android": [
            "peer_transport_credentials_test.go",
        ],
        "@rules_go//go/platform:darwin": [
            "peer_transport_credentials_test.go",
        ],
        "@rules_go//go/platform:freebsd": [
            "peer_transport_credentials_test.go",
        ],
        "@rules_go//go/platform:ios": [
            "peer_transport_credentials_test.go",
        ],
        "@rules_go//go/platform:linux": [
            "peer_transport_credentials_test.go",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":grpc",
        "//internal/mock",
        "//pkg/auth",
        "//pkg/proto/auth",
        "//pkg/proto/configuration/grpc",
        "//pkg/testutil",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_jmespath_go_jmespath//:go-jmespath",
        "@com_github_stretchr_testify//require",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@io_opentelemetry_go_proto_otlp//common/v1:common",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_uber_go_mock//gomock",
    ],
)
